syntax = "proto3";

package user;

option go_package = "./user";

// 空消息
message Empty {}

// 用户信息结构体
message UserInfo {
  int64 Id = 1;
  string Name = 2;
  int64 FollowCount = 3;
  int64 FansCount = 4;
}

service User {
  rpc GetUserByName(GetUserByNameRequest) returns (GetUserReply);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserReply);
  rpc CreateUser(CreateUserRequest) returns (CreatUserReply);
  rpc UpdateUser(UpdateUserRequest) returns (Empty);

  rpc FollowUser(FollowUserRequest) returns (Empty);
  rpc UnFollowUser(UnFollowUserRequest) returns (Empty);

  rpc GetFollowList(GetFollowListRequest) returns (GetFollowListReply);
  rpc GetFansList(GetFansListRequest) returns (GetFansListReply);

  rpc IsFollow(IsFollowRequest) returns (IsFollowReply);
}

message GetUserByNameRequest {
  string Name = 1;
}

message GetUserByIdRequest {
  int64 Id = 1;
}

message GetUserReply {
  int64   Id = 1;
  string  Name = 2;
  string  Password = 3;
  int64   FollowCount = 4;
  int64   FanCount = 5;
}

message CreateUserRequest {
  string Name = 1;
  string Password = 2;
}

message CreatUserReply {
  int64 Id = 1;
}

message UpdateUserRequest{
  int64   Id = 1;
  string  Name = 2;
  string  Password = 3;
  int64   FollowCount = 4;
  int64   FanCount = 5;
}

message FollowUserRequest {
  int64 UserId = 1;
  int64 FollowUserId = 2;
}

message UnFollowUserRequest {
  int64 UserId = 1;
  int64 UnFollowUserId = 2;
}

message GetFollowListRequest {
  int64 UserId = 1;
}

message GetFollowListReply {
  repeated UserInfo FollowList = 1;
}

message GetFansListRequest {
  int64 UserId = 1;
}

message GetFansListReply {
  repeated UserInfo FansList = 1;
}

message IsFollowRequest {
  int64 UserId = 1;
  int64 FollowUserId = 2;
}

message IsFollowReply {
  bool IsFollow = 1;
}